fix gap between plan blocks

--- a/landing-page/css/pricing.css
+++ b/landing-page/css/pricing.css
@@ -36,8 +36,8 @@
 }
 
 .plans__item {
-  flex-basis: 30%;
-  display: inline-block;
+  flex-basis: 29%;
+  display: block;
 }
 
 .plans__tarif,
